# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import usersRouter from "./users";
 import cardsRouter from "./cards";
 import transactionsRouter from "./transactions";
 import notificationsRouter from "./notifications";
+import shippingRouter from "./shipping";
 import supportRouter from "./support";
 import telegramRouter from "./telegram";
 
@@ -16,6 +17,7 @@ router.use(usersRouter);
 router.use(cardsRouter);
 router.use(transactionsRouter);
 router.use(notificationsRouter);
+router.use(shippingRouter);
 router.use(supportRouter);
 router.use(telegramRouter);
 
